# DimensionMixer

./: Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.yml
.github/workflows/: docs.yml  pylint.yml  python-app.yml  python-package.yml  super-linter.yml  test.yml  unit-test.yml
dimension_mixer/: __init__.py  main.py
docs/: index.md
tests/: test_example.py  test_main.py
